plugins {
    id 'org.springframework.boot' version '4.0.3' apply false
    id 'io.spring.dependency-management' version '1.1.7' apply false
    id 'org.sonarqube' version '7.3.0.8198'
}

allprojects {
    group = 'com.takibu'
    version = '0.0.1-SNAPSHOT'

    repositories { mavenCentral() }
}

subprojects {
    pluginManager.withPlugin('io.spring.dependency-management') {
        dependencyManagement {
            imports {
                mavenBom "org.springframework.boot:spring-boot-dependencies:4.0.3"
            }
        }
    }

    pluginManager.withPlugin('java') {
        apply plugin: 'jacoco'

        java {
            toolchain { languageVersion = JavaLanguageVersion.of(21) }
        }

        // Conserve les noms de paramètres dans le bytecode : requis par Spring Data JPA
        // pour lier les parametres nommes (:param) sans @Param. Aligne Gradle sur l'IDE.
        tasks.withType(JavaCompile).configureEach {
            options.compilerArgs.add('-parameters')
        }

        sourceSets {
            main {
                java {
                    srcDirs.add(layout.buildDirectory.dir("generated/sources/annotationProcessor/java/main"))
                }
            }
        }

        tasks.withType(Test).configureEach {
            useJUnitPlatform()
            finalizedBy(tasks.named('jacocoTestReport'))
        }

        tasks.withType(JacocoReport).configureEach {
            dependsOn(tasks.withType(Test))
            reports {
                xml.required = true
                html.required = true
                csv.required = false
            }
        }
    }
}
